	(module_kill_all):
	(module_cleanup):
	new function to remove dup code

	* fvwm/module_list.c (module_kill):
	changed to move the module to the deathrow list

	* fvwm/module_list.h (fmodule):
	* fvwm/module_list.c (module_alloc):
	(module_list_remove):
	(FlushMessageQueue):
	removed is_removed logic

	* fvwm/module_list.c (module_safefree):
	removed function

	*fvwm/events.c (My_XNextEvent):
	remove old "#if 0" code

2007-08-06  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/module_list.h (fmodule_list_itr):
	* fvwm/module_list.c (module_list_itr_init, module_list_itr_next):
	don't store current pointer in module list iterators.
	fix C89-compilance

2007-08-6  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/events.c (My_XNextEvent):
	* fvwm/module_list.c (KillModuleByName):
	(FlushAllMessageQueues):
	* fvwm/module_interface.c (BroadcastPacket):
	(BroadcastNewPacket):
	(BroadcastName):
	(BroadcastFvwmPicture):
	(BroadcastColorset):
	(BroadcastProperyChange):
	(BroadcastConfigInfoString):
	(CMD_SendToModule):
	* fvwm/modconf.c (ModuleConfig):
	* fvwm/stack.c (BroadcastRestack):	
	replaced module_get_next by module list iterator mechanism

	* fvwm/module_list.h:
	* fvwm/module_list.c (module_get_next):
	removed function

2007-08-5  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_list.h:
	* fvwm/module_list.c (fmodule):
	(fmodule_store):
	(module_insert):
	(module_remove):
	(module_count):
	(module_get_next):
	(FlushAllMessageQueues):
	(KillModuleByName):
	* fvwm/module_interface.c (BroadcastPacket):
	(BroadcastNewPacket):
	(BroadcastName):
	(BroadcastFvwmPicture):
	(BroadcastColorset):
	(BroadcastProperyChange):
	(BroadcastConfigInfoString):
	(CMD_SendToModule):
	* fvwm/event.c (My_XNextEvent):
	* fvwm/stack.c (BroadcastRestack):
	* fvwm/modconf.c (ModuleConfig):
	changed to work with generic list container

	* fvwm/module_list.c (module_insert):
	(module_list_insert):
	(module_remove):
	(module_list_remove):
	(module_count):